--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@ html, body {
 
 .rect {
     width: 100%;
-    background-color: white;
-    mix-blend-mode: overlay;
-    opacity: 50%;
+    background-color: #154c8c;
     border-radius: 1em;
     margin: 0.4em auto;
 }
@@ -25,6 +23,7 @@ html, body {
 
 .game {
     height: 90%;
+    flex-direction: column;
     /* border-top-left-radius: 0;
     border-top-right-radius: 0; */
 }
@@ -41,31 +40,18 @@ html, body {
     justify-content: center;
 }
 
+.row {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .block {
-
-}
-
-.rect button {
-    background-color: #4CAF50; /* Green background */
-    border: 1px solid green; /* Green border */
-    color: white; /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    float: left; /* Float the buttons side by side */
-}
-  
-  /* Clear floats (clearfix hack) */
-/* .rect:after {
-    content: "";
-    clear: both;
-    display: table;
-} */
-  
-.rect button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
-}
-  
-  /* Add a background color on hover */
-.rect button:hover {
-    background-color: #3e8e41;
+    width: 3em;
+    height: 3em;
+    background-color: #0c2c5c;
+    border: none;
+    color: white;
+    margin: 0.1em;
+    padding: 0;
 }
