--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
     width: 100%;
     margin: 0;
     background-color: #0e335e;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .rect {
@@ -16,7 +17,7 @@ html, body {
 }
 
 .toolbar {
-    height: 10%;
+    height: 8%;
     /* border-bottom-left-radius: 0;
     border-bottom-right-radius: 0; */
 }
@@ -70,6 +71,40 @@ html, body {
 }
 
 .block div {
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
+}
+
+.inner-toolbar {
+    height: 65%;
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 1.4em;
+}
+
+.full-height {
+    height: 100%;
+}
+
+img {
+    height: 80%;
+}
+
+.margin {
+    margin: 0 0.2em;
+}
+
+#time-text {
+    color: white;
+}
+
+#mines-text {
+    color: #931e1e;
+    font-weight: bold;
+}
+
+.pointer {
+    cursor: pointer;
 }
