--- a/style.css
+++ b/style.css
@@ -1,37 +1,47 @@
 html, body {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
     margin: 0;
     background-color: #0e335e;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
 .rect {
-    width: 100%;
     background-color: #154c8c;
     border-radius: 1em;
     margin: 0.4em auto;
 }
 
 .toolbar {
-    height: 8%;
-    /* border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0; */
+    margin: 1em 0;
+    height: 2em;
 }
 
 .game {
-    height: 90%;
     flex-direction: column;
-    /* border-top-left-radius: 0;
-    border-top-right-radius: 0; */
+    padding: 1em;
+}
+
+.row:first-child > .block:first-child {
+    border-top-left-radius: 1em;
+}
+
+.row:first-child > .block:last-child {
+    border-top-right-radius: 1em;
+}
+
+.row:last-child > .block:first-child {
+    border-bottom-left-radius: 1em;
+}
+
+.row:last-child > .block:last-child {
+    border-bottom-right-radius: 1em;
 }
 
 .screen {
-    height: 85%;
-    width: 60%;
     flex-direction: column;
 }
 
@@ -39,12 +49,6 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.row {
-    width: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 .block {
@@ -80,7 +84,7 @@ html, body {
 }
 
 .inner-toolbar {
-    height: 65%;
+    height: 75%;
     width: 75%;
     display: flex;
     align-items: center;
@@ -102,6 +106,11 @@ img {
 
 #time-text {
     color: white;
+}
+
+.inner-toolbar > * {
+    flex-basis: 0;
+    flex-grow: 1;
 }
 
 #mines-text {
